alterei o titulo da pagina

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" <title>AluraFlix</title>
+    <link rel="stylesheet" href="style.css" <title>Metflix</title>
 </head>
 
 <body>
     <section>
         <div>
-            <header>AluraFlix</header>
+            <header>Metflix</header>
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
             <p>#homem-aranha</p>
         </div>
